@@ -12,6 +12,8 @@ What's New in Python 2.3.1?
 Core and builtins
 -----------------
 
+- Bug #603724: Pass an explicit buffer to setvbuf in PyFile_SetBufSize().
+
 - Bug #795506:  The % formatting operator did not support '%F' as
   had been documented.
 
